# note

./: README.md  index.html  package-lock.json  package.json
scripts/: install-app.sh  install-macos.sh  install-ubuntu.sh  setup-macos.sh  setup-ubuntu.sh
src/: App.css  App.tsx  BackgroundJobs.tsx  DragSplitter.tsx  Editor.tsx  MarkdownView.tsx  NoteLinkPalette.tsx  NotePanel.tsx  NotesList.tsx  SearchPalette.tsx  SettingsPanel.tsx  SlashPalette.tsx  TagInput.tsx  ThemePicker.tsx  api.ts  styles.css  themes.ts
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: git_sync.rs  lib.rs  main.rs  notes.rs  qmd.rs  recording.rs
