[package]
name = "dump"
version = "0.1.0"
edition = "2021"

[lib]
name = "dump_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "dump"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
glob = "0.3"
regex = "1"
tokio = { version = "1", features = ["sync", "time", "rt", "process", "macros"] }
cpal = "0.17"
hound = "3.5"
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3"
